--- a/requirements.txt
+++ b/requirements.txt
@@ -149,7 +149,7 @@ scipy==1.11.4
 seaborn==0.13.2
 selenium==4.12.0
 Send2Trash==1.8.2
-shap==0.48.0
+shap==0.48.0 --no-binary shap
 six==1.16.0
 slicer==0.0.8
 smmap==5.0.1
